<resources>
    <string name="app_name">Snowdays23</string>
    <string name="error_part_by_uid_bad_request">Failed request. Please try again.</string>
    <string name="activity_participant_detail_title">Participant detail</string>
    <string name="cd_activity_participant_detail_badge">Icon of participant details</string>
    <string name="activity_participant_detail_first_name">First name</string>
    <string name="activity_participant_detail_last_name">Last name</string>
    <string name="activity_participant_detail_university">University</string>
    <string name="activity_participant_detail_dob">Date of birth</string>
    <string name="activity_participant_detail_bracelet_id">Bracelet ID</string>
    <string name="activity_participant_detail_eating_habits">Eating habits</string>
    <string name="cd_activity_participant_detail_gluten_free">Icon of gluten intolerance</string>
    <string name="cd_activity_participant_detail_lactose_free">Icon of lactose intolerance</string>
    <string name="cd_activity_participant_detail_vegetarian">Icon of vegetarianism</string>
    <string name="cd_activity_participant_detail_vegan">Icon of veganism</string>
    <string name="info_part_by_uid_not_found">No participant found with this bracelet ID</string>
    <string name="cd_item_participant_bracelet_assigned">Icon of bracelet assignment status</string>
    <string name="error_failed_loading_retry">Retry</string>
    <string name="error_failed_loading">An error occurred while loading</string>
    <string name="toolbar_main_activity_all_participants">Participants list</string>
    <string name="activity_list_participants_title">All participants</string>
    <string name="cd_activity_participant_detail_assign_tag">Button to assign a bracelet to the selected participant</string>
    <string name="cd_fragment_scan_participants_scan_tag">Icon of bracelet scanning</string>
    <string name="fragment_scan_participant_scan_tag">Bring a bracelet close to the device to retrieve participant details or to assign it to a participant</string>
    <string name="activity_list_participants_assign_title">Assign bracelet</string>
    <string name="dialog_bracelet_confirmation_title">Confirm</string>
    <string name="dialog_bracelet_confirmation_message">Bring the bracelet close another time to confirm the assignment</string>
    <string name="activity_login_username_hint">Username</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_submit">Login</string>
    <string name="cd_sd_logo">Snowdays logo</string>
    <string name="activity_login_header">Staff access</string>
    <string name="activity_list_participants_assign_error">Error assigning bracelet, please retry</string>
    <string name="activity_list_participants_assign_success">Bracelet assigned successfully</string>
    <string name="activity_login_invalid_response">Invalid response from server, please try again</string>
    <string name="activity_login_success">Logged in successfully</string>
    <string name="activity_login_request_failure">Request failed, please retry</string>
    <string name="activity_login_wrong_credentials">Invalid credentals, please check them and retry</string>
    <string name="dialog_login_loading_message">Loading…</string>
    <string name="navigation_participants">Participants</string>
    <string name="navigation_events">Events</string>
    <string name="fragment_scan_participant_title">Participant information</string>
    <string name="activity_create_event_title">Create an event</string>
    <string name="activity_create_event_name_hint">Event name</string>
    <string name="activity_create_event_description_hint">Optional description</string>
    <string name="toolbar_create_event_activity_done">Done</string>
    <string name="activity_create_event_only_participants_label">Participants only</string>
    <string name="activity_create_event_only_participants_description">Make this event only accessible to participants with a Snowdays ticket (e.g. no party beasts). Trying to check others in will fail.</string>
    <string name="cd_activity_create_event_icon">Icon assigned to the event being created</string>
    <string name="cd_fragment_events_fab">Button for creating a new event</string>
    <string name="fragment_events_title">Events</string>
    <string name="activity_create_event_success">Event created successfully!</string>
    <string name="cd_item_event_icon">Icon assigned to an event in the list</string>
    <string name="activity_event_check_in_title">Check-in</string>
    <string name="cd_activity_event_check_in_icon">Icon assigned to the selected event</string>
    <string name="activity_event_check_in_checked_in">In</string>
    <string name="activity_event_check_in_left">Left</string>
    <string name="activity_event_check_in_expected">All</string>
    <string name="cd_activity_event_check_in_scan_tag">Icon of bracelet scanning</string>
    <string name="activity_event_check_in_scan_tag">Bring a bracelet close to the device to check someone in</string>
    <string name="activity_event_check_in_no_event">Failed to open check-in session for this event</string>
    <string name="activity_event_check_in_update_failed">Update failed, event data might be out of date</string>
    <string name="activity_event_check_in_update_retry">Retry</string>
    <string name="activity_event_check_in_success">Checked in</string>
    <string name="activity_event_check_in_invalid_response">Invalid response, please retry</string>
    <string name="activity_event_check_in_failed_request">Could not complete the request, please retry</string>
    <string name="participants_search">Search</string>
    <string name="activity_list_people_tab_participants">Participants</string>
    <string name="activity_list_people_tab_party_beasts">Party beasts</string>
    <string name="activity_party_beast_detail_title">Party beast detail</string>
    <string name="activity_participant_detail_phone">Phone</string>
    <string name="activity_party_beast_detail_phone">Phone</string>
    <string name="activity_party_beast_detail_email">Email</string>
    <string name="activity_participant_detail_email">Email</string>
    <string name="activity_participant_detail_rentals">Rentals</string>
    <string name="activity_participant_detail_height">Height</string>
    <string name="activity_participant_detail_weight">Weight</string>
    <string name="activity_participant_detail_shoe_size">Shoe size</string>
    <string name="activity_participant_detail_head_size">Helmet size</string>
    <string name="activity_participant_detail_selected_sport">Sport</string>
    <string name="activity_participant_detail_no_sport">None</string>
    <string name="activity_participant_detail_height_value">%d cm</string>
    <string name="activity_participant_detail_weight_value">%d kg</string>
    <string name="activity_participant_detail_vegetarian">Vegetarian</string>
    <string name="activity_participant_detail_vegan">Vegan</string>
    <string name="activity_participant_detail_gluten_free">Gluten intolerant</string>
    <string name="activity_participant_detail_catering_lactose_intolerant">Lactose intolerant</string>
    <string name="toolbar_activity_participant_detail_view_mode">Change view mode</string>
    <string name="activity_participant_detail_catering_no_needs">No particular eating need</string>
    <string name="activity_participant_detail_catering_needs_label">Eating needs</string>
    <string name="activity_participant_detail_catering_additional_notes_label">Additional notes</string>
    <string name="activity_participant_detail_catering_no_additional_needs">No additional needs</string>
    <string name="dialog_bracelet_uid_mismatch_title">Error</string>
    <string name="dialog_bracelet_uid_mismatch_message">First and second scan were not of the same bracelet. Please try again.</string>
    <string name="OK">OK</string>

</resources>