<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            app:title="@string/activity_participant_detail_title"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:src="@drawable/ic_account_badge"
                android:contentDescription="@string/cd_activity_participant_detail_badge"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_participant_detail_first_name"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_participant_detail_first_name"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_participant_detail_last_name"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_participant_detail_last_name"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_participant_detail_dob"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_participant_detail_dob"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_participant_detail_university"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_participant_detail_university"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_participant_detail_bracelet_id"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_participant_detail_bracelet_id"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_participant_detail_eating_habits"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_marginHorizontal="8dp"
                        android:padding="2dp"
                        android:visibility="gone"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:focusable="true"
                        android:clickable="true"
                        android:id="@+id/activity_participant_detail_gluten_free"
                        android:src="@drawable/ic_gluten_free"
                        android:contentDescription="@string/cd_activity_participant_detail_gluten_free"/>

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_marginHorizontal="8dp"
                        android:padding="2dp"
                        android:visibility="gone"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:focusable="true"
                        android:clickable="true"
                        android:id="@+id/activity_participant_detail_lactose_free"
                        android:src="@drawable/ic_lactose_free"
                        android:contentDescription="@string/cd_activity_participant_detail_lactose_free"/>

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_marginHorizontal="8dp"
                        android:padding="2dp"
                        android:visibility="gone"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:focusable="true"
                        android:clickable="true"
                        android:id="@+id/activity_participant_detail_vegetarian"
                        android:src="@drawable/ic_vegetarian"
                        android:contentDescription="@string/cd_activity_participant_detail_vegetarian"/>

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_marginHorizontal="8dp"
                        android:padding="2dp"
                        android:visibility="gone"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:focusable="true"
                        android:clickable="true"
                        android:id="@+id/activity_participant_detail_vegan"
                        android:src="@drawable/ic_vegan"
                        android:contentDescription="@string/cd_activity_participant_detail_vegan"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>