<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CreateEventActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            app:title="@string/activity_create_event_title"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:menu="@menu/toolbar_activity_create_event"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="16dp"
                    android:padding="8dp"
                    android:id="@+id/activity_create_event_icon"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_flag"
                    android:background="#dfdfdf"
                    android:contentDescription="@string/cd_activity_create_event_icon"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_create_event_name"
                        android:hint="@string/activity_create_event_name_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="64"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="128dp"
                    android:id="@+id/activity_create_event_description"
                    android:hint="@string/activity_create_event_description_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="128"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_create_event_only_participants"
                    android:textColor="@color/blue_200"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_create_event_only_participants_label"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_create_event_only_participants_description"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:textSize="13.6sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>