<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            app:title="@string/activity_party_beast_detail_title"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:src="@drawable/ic_party"
                android:contentDescription="@string/cd_activity_participant_detail_badge"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_participant_detail_first_name"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_participant_detail_first_name"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"
                    android:textAlignment="viewEnd"
                    android:maxEms="32"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_participant_detail_last_name"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_participant_detail_last_name"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"
                    android:textAlignment="viewEnd"
                    android:maxEms="32"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_party_beast_detail_email"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_party_beast_detail_email"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"
                    android:textAlignment="viewEnd"
                    android:maxEms="32"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_party_beast_detail_phone"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_party_beast_detail_phone"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"
                    android:textAlignment="viewEnd"
                    android:maxEms="32"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_participant_detail_bracelet_id"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_participant_detail_bracelet_id"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"
                    android:textAlignment="viewEnd"
                    android:maxEms="32"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="64dp"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:id="@+id/fab"
        android:src="@drawable/ic_tag_assign"
        android:contentDescription="@string/cd_activity_participant_detail_assign_tag"
        app:fabSize="normal"
        app:backgroundTint="@color/white"
        app:elevation="6dp"
        app:pressedTranslationZ="6dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>